externals/tecio/teciosrc/TECIO.h

/**
 * New TecIO output routines support 64-bit output, all var types except bit, and out-of-order data output.
 * SZL output only (may support plt in the future), and no polyhedral support yet.
 */

EXTERNC tecio_API int32_t tecFileWriterOpen(
    char const* fileName,
    char const* dataSetTitle,
    char const* variableList,
    int32_t     fileFormat,
    int32_t     fileType,
    int32_t     defaultVarType,
    void*       gridFileHandle,
    void**      fileHandle);
EXTERNC tecio_API int32_t tecFileSetDiagnosticsLevel(
    void*   fileHandle,
    int32_t level);
EXTERNC tecio_API int32_t tecMPIInitialize(
    void*    fileHandle,
    MPI_Comm communicator,
    int32_t  mainRank);
EXTERNC tecio_API int32_t tecZoneCreateIJK(
    void*          fileHandle,
    char const*    zoneTitle,
    int64_t        imax,
    int64_t        jmax,
    int64_t        kmax,
    int32_t const* varTypes,
    int32_t const* shareVarFromZone,
    int32_t const* valueLocations,
    int32_t const* passiveVarList,
    int32_t        shareFaceNeighborsFromZone,
    int64_t        numFaceConnections,
    int32_t        faceNeighborMode,
    int32_t*       zone);
EXTERNC tecio_API int32_t tecZoneCreateFE(
    void*          fileHandle,
    char const*    zoneTitle,
    int32_t        zoneType,
    int64_t        numNodes,
    int64_t        numCells,
    int32_t const* varTypes,
    int32_t const* shareVarFromZone,
    int32_t const* valueLocations,
    int32_t const* passiveVarList,
    int32_t        shareConnectivityFromZone,
    int64_t        numFaceConnections,
    int32_t        faceNeighborMode,
    int32_t*       zone);
EXTERNC tecio_API int32_t tecZoneCreatePoly(
    void*          fileHandle,
    char const*    zoneTitle,
    int32_t        zoneType,
    int64_t        numNodes,
    int64_t        numFaces,
    int64_t        numCells,
    int64_t        totalNumFaceNodes,
    int32_t const* varTypes,
    int32_t const* shareVarFromZone,
    int32_t const* valueLocations,
    int32_t const* passiveVarList,
    int32_t        shareConnectivityFromZone,
    int64_t        numConnectedBoundaryFaces,
    int64_t        totalNumBoundaryConnections,
    int32_t*       zone);
EXTERNC tecio_API int32_t tecZoneSetUnsteadyOptions(
    void*   fileHandle,
    int32_t zone,
    double  solutionTime,
    int32_t strandID);
EXTERNC tecio_API int32_t tecZoneSetParentZone(
    void*   fileHandle,
    int32_t zone,
    int32_t parentZone);
EXTERNC tecio_API int32_t tecZoneMapPartitionsToMPIRanks(
    void*          fileHandle,
    int32_t&       zone, // Number may change due to communication with the main output rank
    int32_t        numPartitions,
    int32_t const* mpiRanksForPartitions);
EXTERNC tecio_API int32_t tecFEPartitionCreate32(
    void*          fileHandle,
    int32_t        zone,
    int32_t        partition,
    int64_t        numNodes,
    int64_t        numCells,
    int64_t        numGhostNodes,
    int32_t const* ghostNodes,
    int32_t const* neighborPartitions,
    int32_t const* neighborPartitionNodes,
    int64_t        numGhostCells,
    int32_t const* ghostCells);
EXTERNC tecio_API int32_t tecFEPartitionCreate64(
    void*          fileHandle,
    int32_t        zone,
    int32_t        partition,
    int64_t        numNodes,
    int64_t        numCells,
    int64_t        numGhostNodes,
    int64_t const* ghostNodes,
    int32_t const* neighborPartitions,
    int64_t const* neighborPartitionNodes,
    int64_t        numGhostCells,
    int64_t const* ghostCells);
EXTERNC tecio_API int32_t tecZoneVarWriteDoubleValues(
    void*         fileHandle,
    int32_t       zone,
    int32_t       var,
    int32_t       partition,
    int64_t       count,
    double const* values);
EXTERNC tecio_API int32_t tecZoneVarWriteFloatValues(
    void*        fileHandle,
    int32_t      zone,
    int32_t      var,
    int32_t      partition,
    int64_t      count,
    float const* values);
EXTERNC tecio_API int32_t tecZoneVarWriteInt32Values(
    void*          fileHandle,
    int32_t        zone,
    int32_t        var,
    int32_t        partition,
    int64_t        count,
    int32_t const* values);
EXTERNC tecio_API int32_t tecZoneVarWriteInt16Values(
    void*          fileHandle,
    int32_t        zone,
    int32_t        var,
    int32_t        partition,
    int64_t        count,
    int16_t const* values);