externals/tecio/teciosrc/tecio.f90


interface

! Output routine interfaces
integer(c_int32_t) function tecFileWriterOpen( &
    fileName, &
    dataSetTitle, &
    variableList, &
    fileFormat, &
    fileType, &
    defaultVarType, &
    gridFileHandle, &
    fileHandle) &
    bind(c, name="tecFileWriterOpen")
    use iso_c_binding
    implicit none
    character(c_char), intent(in)         :: fileName(*)
    character(c_char), intent(in)         :: dataSetTitle(*)
    character(c_char), intent(in)         :: variableList(*)
    integer(c_int32_t), value, intent(in) :: fileFormat
    integer(c_int32_t), value, intent(in) :: fileType
    integer(c_int32_t), value, intent(in) :: defaultVarType
    type(c_ptr), value, intent(in)        :: gridFileHandle
    type(c_ptr), intent(out)              :: fileHandle
end function tecFileWriterOpen

integer(c_int32_t) function tecFileSetDiagnosticsLevel( &
    fileHandle, &
    level) &
    bind(c, name="tecFileSetDiagnosticsLevel")
    use iso_c_binding
    implicit none
    type(c_ptr), value, intent(in)        :: fileHandle
    integer(c_int32_t), value, intent(in) :: level
end function tecFileSetDiagnosticsLevel

integer(c_int32_t) function tecMPIInitialize( &
    fileHandle, &
    communicator, &
    mainRank) &
    bind(c, name="tecMPIInitializef")
    use iso_c_binding
    implicit none
    type(c_ptr), value, intent(in)        :: fileHandle
    integer(c_int32_t), value, intent(in) :: communicator
    integer(c_int32_t), value, intent(in) :: mainRank
end function tecMPIInitialize

integer(c_int32_t) function tecZoneCreateIJK( &
    fileHandle, &
    zoneTitle, &
    imax, &
    jmax, &
    kmax, &
    varTypes, &
    shareVarFromZone, &
    valueLocations, &
    passiveVarList, &
    shareFaceNeighborsFromZone, &
    numFaceConnections, &
    faceNeighborMode, &
    zone) &
    bind(c, name="tecZoneCreateIJK")
    use iso_c_binding
    implicit none
    type(c_ptr), value, intent(in)         :: fileHandle
    character(c_char), intent(in)          :: zoneTitle(*)
    integer(c_int64_t), value, intent(in)  :: imax
    integer(c_int64_t), value, intent(in)  :: jmax
    integer(c_int64_t), value, intent(in)  :: kmax
    integer(c_int32_t), intent(in)         :: varTypes(*)
    integer(c_int32_t), intent(in)         :: shareVarFromZone(*)
    integer(c_int32_t), intent(in)         :: valueLocations(*)
    integer(c_int32_t), intent(in)         :: passiveVarList(*)
    integer(c_int32_t), value, intent(in)  :: shareFaceNeighborsFromZone
    integer(c_int64_t), value, intent(in)  :: numFaceConnections
    integer(c_int32_t), value, intent(in)  :: faceNeighborMode
    integer(c_int32_t), intent(out)        :: zone
end function tecZoneCreateIJK

integer(c_int32_t) function tecZoneCreateFE( &
    fileHandle, &
    zoneTitle, &
    zoneType, &
    numNodes, &
    numCells, &
    varTypes, &
    shareVarFromZone, &
    valueLocations, &
    passiveVarList, &
    shareConnectivityFromZone, &
    numFaceConnections, &
    faceNeighborMode, &
    zone) &
    bind(c, name="tecZoneCreateFE")
    use iso_c_binding
    implicit none
    type(c_ptr), value, intent(in)         :: fileHandle
    character(c_char), intent(in)          :: zoneTitle(*)
    integer(c_int32_t), value, intent(in)  :: zoneType
    integer(c_int64_t), value, intent(in)  :: numNodes
    integer(c_int64_t), value, intent(in)  :: numCells
    integer(c_int32_t), intent(in)         :: varTypes(*)
    integer(c_int32_t), intent(in)         :: shareVarFromZone(*)
    integer(c_int32_t), intent(in)         :: valueLocations(*)
    integer(c_int32_t), intent(in)         :: passiveVarList(*)
    integer(c_int32_t), value, intent(in)  :: shareConnectivityFromZone
    integer(c_int64_t), value, intent(in)  :: numFaceConnections
    integer(c_int32_t), value, intent(in)  :: faceNeighborMode
    integer(c_int32_t), intent(out)        :: zone
end function tecZoneCreateFE

integer(c_int32_t) function tecZoneCreatePoly( &
    fileHandle, &
    zoneTitle, &
    zoneType, &
    numNodes, &
    numFaces, &
    numCells, &
    totalNumFaceNodes, &
    varTypes, &
    shareVarFromZone, &
    valueLocations, &
    passiveVarList, &
    shareConnectivityFromZone, &
    numConnectedBoundaryFaces, &
    totalNumBoundaryConnections, &
    zone) &
    bind(c, name="tecZoneCreatePoly")
    use iso_c_binding
    implicit none
    type(c_ptr), value, intent(in)         :: fileHandle
    character(c_char), intent(in)          :: zoneTitle(*)
    integer(c_int32_t), value, intent(in)  :: zoneType
    integer(c_int64_t), value, intent(in)  :: numNodes
    integer(c_int64_t), value, intent(in)  :: numFaces
    integer(c_int64_t), value, intent(in)  :: numCells
    integer(c_int64_t), value, intent(in)  :: totalNumFaceNodes
    integer(c_int32_t), intent(in)         :: varTypes(*)
    integer(c_int32_t), intent(in)         :: shareVarFromZone(*)
    integer(c_int32_t), intent(in)         :: valueLocations(*)
    integer(c_int32_t), intent(in)         :: passiveVarList(*)
    integer(c_int32_t), value, intent(in)  :: shareConnectivityFromZone
    integer(c_int64_t), value, intent(in)  :: numConnectedBoundaryFaces
    integer(c_int64_t), value, intent(in)  :: totalNumBoundaryConnections
    integer(c_int32_t), intent(out)        :: zone
end function tecZoneCreatePoly

integer(c_int32_t) function tecZoneSetUnsteadyOptions( &
    fileHandle, &
    zone, &
    solutionTime, &
    strandID) &
    bind(c, name="tecZoneSetUnsteadyOptions")
    use iso_c_binding
    implicit none
    type(c_ptr), value, intent(in)        :: fileHandle
    integer(c_int32_t), value, intent(in) :: zone
    real(c_double), value, intent(in)     :: solutionTime
    integer(c_int32_t), value, intent(in) :: strandID
end function tecZoneSetUnsteadyOptions

integer(c_int32_t) function tecZoneSetParentZone( &
    fileHandle, &
    zone, &
    parentZone) &
    bind(c, name="tecZoneSetParentZone")
    use iso_c_binding
    implicit none
    type(c_ptr), value, intent(in)        :: fileHandle
    integer(c_int32_t), value, intent(in) :: zone
    integer(c_int32_t), value, intent(in) :: parentZone
end function tecZoneSetParentZone

integer(c_int32_t) function tecZoneMapPartitionsToMPIRanks( &
    fileHandle, &
    zone, &
    numPartitions, &
    mpiRanksForPartitions) &
    bind(c, name="tecZoneMapPartitionsToMPIRanks")
    use iso_c_binding
    implicit none
    type(c_ptr), value, intent(in)        :: fileHandle
    integer(c_int32_t), intent(inout)     :: zone
    integer(c_int32_t), value, intent(in) :: numPartitions
    integer(c_int32_t), intent(in)        :: mpiRanksForPartitions(*)
    end function tecZoneMapPartitionsToMPIRanks

integer(c_int32_t) function tecFEPartitionCreate32( &
    fileHandle, &
    zone, &
    partition, &
    numNodes, &
    numCells, &
    numGhostNodes, &
    ghostNodes, &
    neighborPartitions, &
    neighborPartitionNodes, &
    numGhostCells, &
    ghostCells) &
    bind(c, name="tecFEPartitionCreate32")
    use iso_c_binding
    implicit none
    type(c_ptr), value, intent(in)        :: fileHandle
    integer(c_int32_t), value, intent(in) :: zone
    integer(c_int32_t), value, intent(in) :: partition
    integer(c_int64_t), value, intent(in) :: numNodes
    integer(c_int64_t), value, intent(in) :: numCells
    integer(c_int64_t), value, intent(in) :: numGhostNodes
    integer(c_int32_t), intent(in)        :: ghostNodes(*)
    integer(c_int32_t), intent(in)        :: neighborPartitions(*)
    integer(c_int32_t), intent(in)        :: neighborPartitionNodes(*)
    integer(c_int64_t), value, intent(in) :: numGhostCells
    integer(c_int32_t), intent(in)        :: ghostCells(*)
end function tecFEPartitionCreate32

integer(c_int32_t) function tecFEPartitionCreate64( &
    fileHandle, &
    zone, &
    partition, &
    numNodes, &
    numCells, &
    numGhostNodes, &
    ghostNodes, &
    neighborPartitions, &
    neighborPartitionNodes, &
    numGhostCells, &
    ghostCells) &
    bind(c, name="tecFEPartitionCreate64")
    use iso_c_binding
    implicit none
    type(c_ptr), value, intent(in)        :: fileHandle
    integer(c_int32_t), value, intent(in) :: zone
    integer(c_int32_t), value, intent(in) :: partition
    integer(c_int64_t), value, intent(in) :: numNodes
    integer(c_int64_t), value, intent(in) :: numCells
    integer(c_int64_t), value, intent(in) :: numGhostNodes
    integer(c_int64_t), intent(in)        :: ghostNodes(*)
    integer(c_int32_t), intent(in)        :: neighborPartitions(*)
    integer(c_int64_t), intent(in)        :: neighborPartitionNodes(*)
    integer(c_int64_t), value, intent(in) :: numGhostCells
    integer(c_int64_t), intent(in)        :: ghostCells(*)
end function tecFEPartitionCreate64

integer(c_int32_t) function tecIJKPartitionCreate64( &
    fileHandle, &
    zone, &
    partition, &
    imin, &
    jmin, &
    kmin, &
    imax, &
    jmax, &
    kmax) &
    bind(c, name="tecIJKPartitionCreate64")
    use iso_c_binding
    implicit none
    type(c_ptr), value, intent(in)        :: fileHandle
    integer(c_int32_t), value, intent(in) :: zone
    integer(c_int32_t), value, intent(in) :: partition
    integer(c_int64_t), value, intent(in) :: imin
    integer(c_int64_t), value, intent(in) :: jmin
    integer(c_int64_t), value, intent(in) :: kmin
    integer(c_int64_t), value, intent(in) :: imax
    integer(c_int64_t), value, intent(in) :: jmax
    integer(c_int64_t), value, intent(in) :: kmax
end function tecIJKPartitionCreate64

integer(c_int32_t) function tecZoneVarWriteDoubleValues( &
    fileHandle, &
    zone, &
    var, &
    partition, &
    count, &
    values) &
    bind(c, name="tecZoneVarWriteDoubleValues")
    use iso_c_binding
    implicit none
    type(c_ptr), value, intent(in)        :: fileHandle
    integer(c_int32_t), value, intent(in) :: zone
    integer(c_int32_t), value, intent(in) :: var
    integer(c_int32_t), value, intent(in) :: partition
    integer(c_int64_t), value, intent(in) :: count
    real(c_double), intent(in)            :: values(*)
end function tecZoneVarWriteDoubleValues

integer(c_int32_t) function tecZoneVarWriteFloatValues( &
    fileHandle, &
    zone, &
    var, &
    partition, &
    count, &
    values) &
    bind(c, name="tecZoneVarWriteFloatValues")
    use iso_c_binding
    implicit none
    type(c_ptr), value, intent(in)        :: fileHandle
    integer(c_int32_t), value, intent(in) :: zone
    integer(c_int32_t), value, intent(in) :: var
    integer(c_int32_t), value, intent(in) :: partition
    integer(c_int64_t), value, intent(in) :: count
    real(c_float), intent(in)             :: values(*)
end function tecZoneVarWriteFloatValues

integer(c_int32_t) function tecZoneVarWriteInt32Values( &
    fileHandle, &
    zone, &
    var, &
    partition, &
    count, &
    values) &
    bind(c, name="tecZoneVarWriteInt32Values")
    use iso_c_binding
    implicit none
    type(c_ptr), value, intent(in)        :: fileHandle
    integer(c_int32_t), value, intent(in) :: zone
    integer(c_int32_t), value, intent(in) :: var
    integer(c_int32_t), value, intent(in) :: partition
    integer(c_int64_t), value, intent(in) :: count
    integer(c_int32_t), intent(in)        :: values(*)
end function tecZoneVarWriteInt32Values

integer(c_int32_t) function tecZoneVarWriteInt16Values( &
    fileHandle, &
    zone, &
    var, &
    partition, &
    count, &
    values) &
    bind(c, name="tecZoneVarWriteInt16Values")
    use iso_c_binding
    implicit none
    type(c_ptr), value, intent(in)        :: fileHandle
    integer(c_int32_t), value, intent(in) :: zone
    integer(c_int32_t), value, intent(in) :: var
    integer(c_int32_t), value, intent(in) :: partition
    integer(c_int64_t), value, intent(in) :: count
    integer(c_int16_t), intent(in)        :: values(*)
end function tecZoneVarWriteInt16Values
